--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
     ],
     "require": {
         "php": ">=7.0",
-        "composer/installers": "~1.0"
+        "composer/installers": "~1.0",
+        "october/rain": "^1.0",
+        "october/cms": "^1.0",
+        "october/system": "^1.0"
     }
 }
